--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "test": "npm-run-all lint:* test:*",
     "test:ember": "ember test",
     "test:ember-compatibility": "ember try:each",
-    "release": "standard-version"
+    "release": "standard-version",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "dependencies": {
     "ember-cli-babel": "^7.18.0",
@@ -62,6 +65,7 @@
     "lint-staged": "^10.1.3",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
+    "pinst": "^2.1.4",
     "prettier": "^2.0.4",
     "qunit-dom": "^1.1.0",
     "qunit-wait-for": "^2.0.0",
@@ -77,12 +81,6 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.js": "eslint --fix",
